Samsung UI updates: Checkout button made similar to Expedia Removed margin between rainbox image and lob icons on home screen.

--- a/project/src/samsung/res/layout/section_phone_launch_lob.xml
+++ b/project/src/samsung/res/layout/section_phone_launch_lob.xml
@@ -89,6 +89,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:scaleType="fitStart"
             android:src="@drawable/lob_shadow" />
     </LinearLayout>
 
