--- a/project/src/samsung/res/values/themes.xml
+++ b/project/src/samsung/res/values/themes.xml
@@ -15,7 +15,7 @@
         <item name="skin_actionBarCheckMarkDrawable">@drawable/ic_action_bar_checkmark_blue_samsung</item>
         <item name="skin_actionBarCheckoutDrawable">@drawable/ic_action_bar_checkout_arrow_blue_samsung</item>
         <item name="skin_actionBarButtonTextColor">@color/action_bar_text_blue_samsung</item>
-        <item name="skin_loginBookNowButtonDrawable">@drawable/btn_signin_samsung</item>
+        <item name="skin_loginBookNowButtonDrawable">@drawable/btn_signin</item>
         <item name="skin_hotelConfirmationCallActionText">@string/call_expedia_customer_support</item>
         <item name="skin_hotelListingSaleDrawable">@drawable/bg_hotel_cell_sale_samsung</item>
         <item name="skin_hotelDetailSaleRibbonDrawable">@drawable/bg_sale_ribbon_samsung</item>
