--- a/project/src/main/res/layout/car_results_presenter.xml
+++ b/project/src/main/res/layout/car_results_presenter.xml
@@ -57,49 +57,62 @@
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/skin_carsPrimaryColor" />
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:minHeight="?attr/actionBarSize">
+        android:orientation="vertical">
 
-        <FrameLayout
-            android:layout_width="wrap_content"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="2dp"
+            android:layout_gravity="top"
             android:minHeight="?attr/actionBarSize">
 
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/toolbar_search_text"
-                style="@style/CarsToolbarTitleTextAppearance"
+            <FrameLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical" />
-
-            <LinearLayout
-                android:id="@+id/toolbar_two"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:orientation="vertical">
+                android:layout_marginLeft="2dp"
+                android:minHeight="?attr/actionBarSize">
 
                 <com.expedia.bookings.widget.TextView
-                    android:id="@+id/toolbar_detail_text"
+                    android:id="@+id/toolbar_search_text"
                     style="@style/CarsToolbarTitleTextAppearance"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical" />
 
-                <com.expedia.bookings.widget.TextView
-                    android:id="@+id/toolbar_subtitle_text"
-                    style="@style/CarsToolbarSubtitleTextAppearance"
+                <LinearLayout
+                    android:id="@+id/toolbar_two"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:orientation="vertical">
 
-            </LinearLayout>
-        </FrameLayout>
+                    <com.expedia.bookings.widget.TextView
+                        android:id="@+id/toolbar_detail_text"
+                        style="@style/CarsToolbarTitleTextAppearance"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
 
-    </android.support.v7.widget.Toolbar>
+                    <com.expedia.bookings.widget.TextView
+                        android:id="@+id/toolbar_subtitle_text"
+                        style="@style/CarsToolbarSubtitleTextAppearance"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+            </FrameLayout>
+
+        </android.support.v7.widget.Toolbar>
+
+        <View
+            android:id="@+id/toolbar_dropshadow"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/toolbar_dropshadow_height"
+            android:background="@drawable/tb_shadow" />
+    </LinearLayout>
 
     <com.expedia.bookings.widget.FilterButtonWithCountWidget
         android:id="@+id/sort_toolbar"
