--- a/project/src/main/res/layout/error_widget.xml
+++ b/project/src/main/res/layout/error_widget.xml
@@ -9,8 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:paddingTop="?attr/actionBarSize"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingTop="?attr/actionBarSize">
 
         <ImageView
             android:id="@+id/error_image"
@@ -35,17 +35,30 @@
             android:layout_marginRight="72dp"
             android:gravity="center_horizontal"
             android:maxWidth="180dp"
-            android:textSize="13sp"
-            android:textColor="#7D7D7D" />
+            android:textColor="#7D7D7D"
+            android:textSize="13sp" />
 
     </LinearLayout>
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/error_toolbar"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:background="?attr/primary_color"
-        android:minHeight="?attr/actionBarSize"
-        app:titleTextAppearance="?attr/toolbar_title_style" />
+        android:orientation="vertical">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/error_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:background="?attr/primary_color"
+            android:minHeight="?attr/actionBarSize"
+            app:titleTextAppearance="?attr/toolbar_title_style" />
+
+        <View
+            android:id="@+id/toolbar_dropshadow"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/toolbar_dropshadow_height"
+            android:background="@drawable/tb_shadow" />
+    </LinearLayout>
 </merge>
