--- a/project/src/main/res/layout/widget_checkout_base.xml
+++ b/project/src/main/res/layout/widget_checkout_base.xml
@@ -14,7 +14,8 @@
             android:animateLayoutChanges="true"
             android:orientation="vertical">
 
-            <android.support.v7.widget.CardView android:id="@+id/summary_container"
+            <android.support.v7.widget.CardView
+                android:id="@+id/summary_container"
                 xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -41,10 +42,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:orientation="vertical"
                 android:layout_marginLeft="9dp"
                 android:layout_marginRight="9dp"
-                android:layout_marginTop="12dp" />
+                android:layout_marginTop="12dp"
+                android:orientation="vertical" />
 
             <LinearLayout
                 android:id="@+id/hint_container"
@@ -153,14 +154,24 @@
         </LinearLayout>
     </LinearLayout>
 
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/checkout_toolbar"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:background="?attr/primary_color"
-        android:minHeight="?attr/actionBarSize"
-        app:titleTextAppearance="?attr/toolbar_title_style" />
+        android:orientation="vertical">
 
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/checkout_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="?attr/primary_color"
+            android:minHeight="?attr/actionBarSize"
+            app:titleTextAppearance="?attr/toolbar_title_style" />
+
+        <View
+            android:id="@+id/toolbar_dropshadow"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/toolbar_dropshadow_height"
+            android:background="@drawable/tb_shadow" />
+    </LinearLayout>
 </merge>
