--- a/project/src/main/res/layout/widget_lx_sort_filter.xml
+++ b/project/src/main/res/layout/widget_lx_sort_filter.xml
@@ -9,7 +9,7 @@
     android:clickable="true">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/toolbar_sort_filter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
