Fix UI issue, extra bar on LX Sort & filter on Lollipop. https://eiwork.mingle.thoughtworks.com/projects/india_mobile_team/cards/3643.

--- a/project/src/main/res/layout/widget_lx_sort_filter.xml
+++ b/project/src/main/res/layout/widget_lx_sort_filter.xml
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.widget.LXSortFilterWidget xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/sort_filter_widget"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#EFEFEF"
-    android:orientation="vertical"
-    android:clickable="true">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_sort_filter"
@@ -111,4 +106,4 @@
             app:cardCornerRadius="18dp"
             app:cardPreventCornerOverlap="false" />
     </FrameLayout>
-</com.expedia.bookings.widget.LXSortFilterWidget>
+</merge>
