Samsung deal in place of Mobile Exclusive.

--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -363,4 +363,5 @@
     <attr name="skin_lxTicketPlusButtonSelectorDrawable" format="reference" />
     <attr name="skin_lxTicketMinusButtonSelectorDrawable" format="reference" />
 
+    <attr name="skin_dealText" format="reference|string" />
 </resources>
