--- a/project/src/main/res/values/themes.xml
+++ b/project/src/main/res/values/themes.xml
@@ -307,6 +307,7 @@
         <item name="skin_flightLineColor">@color/flight_trip</item>
         <item name="skin_launchTabIndicatorColor">@color/launch_tab_indicator</item>
         <item name="skin_launchActionBarBackgroundColor">@color/cars_launch_actionbar_color</item>
+        <item name="skin_tripsTabText">@string/Your_Trips</item>
     </style>
 
     <style name="LaunchOverflowStyle" parent="Widget.AppCompat.ActionButton.Overflow">
