--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -364,4 +364,5 @@
     <attr name="skin_lxTicketMinusButtonSelectorDrawable" format="reference" />
 
     <attr name="skin_dealText" format="reference|string" />
+    <attr name="skin_tripsTabText" format="reference|string" />
 </resources>
