--- a/project/src/samsung/res/values/themes.xml
+++ b/project/src/samsung/res/values/themes.xml
@@ -8,7 +8,7 @@
         <item name="skin_hotelListingUserRatingStyle">@style/RatingBar.UserReview.Blue</item>
         <item name="skin_ratingBarUserReviewStyle">@style/RatingBar.UserReview.Blue</item>
         <item name="skin_hotelListMapMarkerDrawable">@drawable/map_pin_normal_samsung</item>
-        <item name="skin_bestPriceGuaranteeString">@string/samsung_best_price_guarantee</item>
+        <item name="skin_bestPriceGuaranteeString">@string/best_price_guarantee</item>
         <item name="skin_costSummaryDialogStripeDrawable">@drawable/dialog_breakdown_stripe_samsung</item>
         <item name="skin_flightsCostSummaryDialogStripeDrawable">@drawable/dialog_breakdown_stripe_samsung</item>
         <item name="skin_actionBarSpinnerBackground">@drawable/ab_spinner_samsung</item>
@@ -126,6 +126,7 @@
         <item name="skin_itinCardTitleTextColor">@color/itin_white_text</item>
         <item name="skin_launchTabIndicatorColor">@color/launch_tab_indicator</item>
         <item name="skin_launchActionBarBackgroundColor">@color/cars_launch_actionbar_color</item>
+        <item name="skin_tripsTabText">@string/my_trips</item>
     </style>
 
     <style name="FlightActionBarSamsung" parent="FlightActionBar">
