Updated theme for action bar of Samsung #3670 Action bar brand break

--- a/project/src/samsung/res/values/colors.xml
+++ b/project/src/samsung/res/values/colors.xml
@@ -17,7 +17,7 @@
     <color name="collection_screen_gradient_start_color">#BE2B2E33</color>
     <color name="collection_screen_gradient_end_color">#00808B9F</color>
 
-    <color name="launch_tab_indicator_samsung">@color/action_bar_text_blue_samsung</color>
+    <color name="launch_tab_indicator_samsung">#86878A</color>
     <color name="action_bar_text_blue_samsung">#7baed4</color>
 
     <!-- Hotel price color -->
@@ -42,4 +42,5 @@
     <!-- Flight colors -->
     <color name="flight_free_cancellation_text_color_samsung">#7baed4</color>
 
+    <color name="launch_actionbar_bg_color_samsung">#2B2E33</color>
 </resources>
