--- a/project/src/samsung/res/layout/toolbar_phone_launch.xml
+++ b/project/src/samsung/res/layout/toolbar_phone_launch.xml
@@ -10,8 +10,7 @@
     <com.expedia.bookings.widget.SlidingTabLayout
         android:id="@+id/tab_layout"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:background="@color/cars_launch_actionbar_color" />
+        android:layout_height="match_parent" />
 
     <LinearLayout
         android:id="@+id/collection_layout"
