Notifications and itins fetch better sized images
- Chuning and I found out that the images being fetched for notifications
  and itins were very large. Now we fetch images of appropriate size. On
  phones this saves a bunch of memory.
- Car itin images were trying to Akeakamai a url that was already
  Akeakamai'd

--- a/project/src/main/res/layout/widget_itin_card.xml
+++ b/project/src/main/res/layout/widget_itin_card.xml
@@ -123,7 +123,7 @@
                             android:id="@+id/header_image_container"
                             android:layout_width="match_parent"
                             android:layout_height="@dimen/itin_card_expanded_image_height"
-                            app:scrollMin="-80dp" >
+                            app:scrollMin="@dimen/itin_card_expanded_parallax_slop" >
 
                             <com.expedia.bookings.widget.OptimizedImageView
                                 android:id="@+id/header_image_view"
