--- a/project/src/samsung/res/values/styles_cars.xml
+++ b/project/src/samsung/res/values/styles_cars.xml
@@ -16,19 +16,19 @@
         <item name="skin_carsSortButtonTextSelectorDrawable">@drawable/cars_sort_button_text_selector_samsung</item>
         <item name="skin_carsFilterNumberBgDrawable">@drawable/filter_number_bg_samsung</item>
         <item name="skin_carsToggleBackgroundSelectorDrawable">@drawable/cars_toggle_background_selector_samsung</item>
-        <item name="skin_loginBrandLogoDrawable">@drawable/samsung</item>
+        <item name="skin_loginBrandLogoDrawable">@drawable/expedia</item>
         <item name="skin_costSummaryAlertDrawable">@drawable/dialog_breakdown_stripe_samsung</item>
         <item name="skin_cvvBookButtonKeypadDrawable">@drawable/btn_cvv_keypad_book_samsung</item>
         <item name="skin_cvvDivDrawable">@drawable/div_cvv_samsung</item>
         <item name="skin_checkoutLoginBookNowButtonDrawable">@drawable/btn_signin</item>
         <item name="skin_checkoutLoginButtonColor">#836B11</item>
-        <item name="skin_loginBrandIconDrawable">@drawable/samsung_login</item>
+        <item name="skin_loginBrandIconDrawable">@drawable/expedia_login</item>
         <item name="skin_carsUncheckedToggleTextColor">@color/cars_unchecked_toggle_text_color_samsung</item>
         <item name="skin_carsPinDrawable">@drawable/cars_pin_samsung</item>
 
         <item name="skin_loginBookNowButtonDrawable">@drawable/btn_signin</item>
-        <item name="skin_phoneCheckoutLoginLogoDrawable">@drawable/samsung</item>
-        <item name="skin_hotelCheckoutLogoutLogoDrawable">@drawable/samsung</item>
-        <item name="skin_tabletCheckoutLoginLogoDrawable">@drawable/samsung</item>
+        <item name="skin_phoneCheckoutLoginLogoDrawable">@drawable/expedia</item>
+        <item name="skin_hotelCheckoutLogoutLogoDrawable">@drawable/expedia</item>
+        <item name="skin_tabletCheckoutLoginLogoDrawable">@drawable/expedia</item>
     </style>
 </resources>
