--- a/project/src/samsung/res/values/styles_lx.xml
+++ b/project/src/samsung/res/values/styles_lx.xml
@@ -4,22 +4,22 @@
     <style name="Whitelabel.LXTheme.Base" parent="AppTheme.Base.LX">
         <!-- Required white label attr for login widget -->
         <item name="skin_loginBookNowButtonDrawable">@drawable/btn_signin</item>
-        <item name="skin_phoneCheckoutLoginLogoDrawable">@drawable/samsung</item>
-        <item name="skin_hotelCheckoutLogoutLogoDrawable">@drawable/samsung</item>
-        <item name="skin_tabletCheckoutLoginLogoDrawable">@drawable/samsung</item>
+        <item name="skin_phoneCheckoutLoginLogoDrawable">@drawable/expedia</item>
+        <item name="skin_hotelCheckoutLogoutLogoDrawable">@drawable/expedia</item>
+        <item name="skin_tabletCheckoutLoginLogoDrawable">@drawable/expedia</item>
         <item name="primary_color">@color/lx_primary_color_samsung</item>
         <item name="android:colorPrimaryDark">@color/lx_secondary_color_disabled_samsung</item>
         <item name="android:colorButtonNormal">@color/lx_primary_color_samsung</item>
         <item name="colorAccent">@color/lx_primary_color_samsung</item>
 
         <!-- Skins added for whitelabel -->
-        <item name="skin_loginBrandLogoDrawable">@drawable/samsung</item>
+        <item name="skin_loginBrandLogoDrawable">@drawable/expedia</item>
         <item name="skin_costSummaryAlertDrawable">@drawable/dialog_breakdown_stripe_samsung</item>
         <item name="skin_cvvBookButtonKeypadDrawable">@drawable/btn_cvv_keypad_book_samsung</item>
         <item name="skin_cvvDivDrawable">@drawable/div_cvv_samsung</item>
         <item name="skin_checkoutLoginBookNowButtonDrawable">@drawable/btn_signin</item>
-        <item name="skin_checkoutLoginButtonColor">#836B11</item>
-        <item name="skin_loginBrandIconDrawable">@drawable/samsung_login</item>
+        <item name="skin_checkoutLoginButtonColor">#836B11</item>`
+        <item name="skin_loginBrandIconDrawable">@drawable/expedia_login</item>
         <item name="skin_lxPrimaryColor">@color/lx_primary_color_samsung</item>
 
         <item name="skin_lxBookNowButtonSelectorDrawable">@drawable/lx_book_now_button_selector_samsung</item>
