--- a/project/src/samsung/res/values/themes.xml
+++ b/project/src/samsung/res/values/themes.xml
@@ -24,9 +24,9 @@
         <item name="skin_calendarDatePickerPopupDrawable">@drawable/calendar_date_picker_popup_samsung</item>
         <item name="skin_hotelBookButtonColor">@android:color/white</item>
         <item name="skin_cvvBookButtonKeypadDrawable">@drawable/btn_cvv_keypad_book_samsung</item>
-        <item name="skin_webViewPreferencesActionBarLogo">@drawable/ic_action_bar_samsung_logo_small</item>
+        <item name="skin_webViewPreferencesActionBarLogo">@android:color/transparent</item>
         <item name="skin_aboutAppLogoDrawable">@drawable/ic_launcher</item>
-        <item name="skin_webViewPreferencesActionBarLogoWithTitle">@drawable/ic_action_bar_samsung_logo_small</item>
+        <item name="skin_webViewPreferencesActionBarLogoWithTitle">@android:color/transparent</item>
         <item name="skin_actionBarBackgroundDrawable">@drawable/bg_action_bar_samsung</item>
         <item name="skin_flightLoadingMessagePosition">@id/search_progress_flight_samsung</item>
         <item name="skin_hotelPrimaryTravelerInfoLogoDrawable">@drawable/ic_samsung_white_logo_small</item>
@@ -61,10 +61,10 @@
 
         <item name="skin_tablet_ab_launch_text2_pin_detail">@string/Destination</item>
         <item name="skin_menuAboutWebViewActivity">@menu/menu_webview</item>
-        <item name="skin_hotelRulesActionBarLogo">@drawable/ic_action_bar_samsung_logo_small</item>
+        <item name="skin_hotelRulesActionBarLogo">@drawable/ic_logo_hotels_samsung</item>
         <item name="skin_flightRulesActionBarLogo">@drawable/ic_logo_flights_samsung</item>
-        <item name="skin_hotelLoginActionBarIcon">@drawable/ic_action_bar_samsung_logo_small</item>
-        <item name="skin_flightLoginActionBarIcon">@drawable/ic_logo_flights_samsung</item>
+        <item name="skin_hotelLoginActionBarIcon">@drawable/ic_action_bar_expedia_logo_small</item>
+        <item name="skin_flightLoginActionBarIcon">@drawable/ic_action_bar_expedia_logo_small</item>
         <item name="skin_etp_pay_now_charges_text">@string/etp_pay_now_charges_text</item>
         <item name="skin_dealText">@string/samsung_deal</item>
         <item name="skin_couponSuccessMessageColor">@color/hotel_price_text_color_samsung</item>
@@ -137,7 +137,7 @@
     </style>
 
     <style name="ItineraryTheme" parent="Theme.Samsung">
-        <item name="android:logo" tools:targetApi="11">@drawable/ic_ab_samsung_logo</item>
+        <item name="android:logo" tools:targetApi="11">@drawable/ic_ab_expedia_logo</item>
         <item name="android:actionBarStyle" tools:targetApi="11">@style/Dark.ActionBar.Samsung</item>
 
         <!-- PopupMenu -->
@@ -165,7 +165,7 @@
     </style>
 
     <style name="LoginTheme" parent="Theme.Phone.Dark">
-        <item name="android:logo" tools:targetApi="11">@drawable/ic_ab_samsung_logo</item>
+        <item name="android:logo" tools:targetApi="11">@drawable/ic_ab_expedia_logo</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowActionBarOverlay">true</item>
     </style>
@@ -188,7 +188,7 @@
     </style>
 
     <style name="Theme.Phone.WebView">
-        <item name="android:logo" tools:targetApi="11">@drawable/icon_home_samsung</item>
+        <item name="android:logo" tools:targetApi="11">@android:color/transparent</item>
     </style>
 
     <style name="Theme.Tablet.Preferences" parent="@style/Theme.Light.Dialog">
