--- a/project/src/main/res/layout/hotel_cell.xml
+++ b/project/src/main/res/layout/hotel_cell.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/card_layer_list"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:orientation="vertical"
     android:paddingBottom="12dp"
     android:paddingLeft="9dp"
     android:paddingRight="9dp"
-    android:paddingTop="12dp"
-    android:background="@drawable/card_layer_list"
-    android:foreground="?android:attr/selectableItemBackground"
-    android:orientation="vertical">
+    android:paddingTop="12dp">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -19,7 +19,7 @@
         <ImageView
             android:id="@+id/background"
             android:layout_width="match_parent"
-            android:layout_height="144dp"
+            android:layout_height="134dp"
             android:scaleType="centerCrop" />
 
         <LinearLayout
@@ -27,21 +27,39 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|left"
             android:orientation="vertical"
-            android:padding="6dp">
+            android:paddingBottom="8dp"
+            android:paddingLeft="11dp">
 
             <com.expedia.bookings.widget.TextView
                 android:id="@+id/hotel_name_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Hotel Title"
-                android:textColor="#ffffff" />
+                app:textStyle="medium"
+                android:textColor="#ffffff"
+                android:textSize="15sp" />
 
-            <RatingBar
-                android:id="@+id/hotel_rating_bar"
-                style="@style/RatingBar.UserReview.Material"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:stepSize=".5" />
+                android:orientation="horizontal"
+                android:gravity="bottom">
+
+                <RatingBar
+                    android:id="@+id/hotel_rating_bar"
+                    style="@style/RatingBar.UserReview.Material"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:stepSize=".5"
+                    android:layout_marginBottom="2dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="amenity goes here"
+                    android:textColor="@color/hotel_cell_light_gray_text"
+                    android:textSize="11sp" />
+
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
@@ -49,43 +67,45 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|right"
             android:orientation="vertical"
-            android:padding="6dp">
+            android:paddingBottom="8dp"
+            android:paddingRight="11dp">
 
             <com.expedia.bookings.widget.TextView
                 android:id="@+id/strike_through_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:layout_marginBottom="3dp"
                 android:text="$100"
-                android:textColor="#ffffff" />
+                android:textColor="@color/hotel_cell_light_gray_text"
+                android:textSize="13sp" />
 
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/price_per_night"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="$99/nt"
-                android:textColor="#ffffff" />
+
         </LinearLayout>
     </FrameLayout>
 
     <LinearLayout
         android:id="@+id/text_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="47dp"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:padding="8dp">
+        android:paddingBottom="2dp"
+        android:paddingLeft="14dp"
+        android:paddingRight="14dp">
 
         <com.expedia.bookings.widget.TextView
             android:id="@+id/guest_rating_percentage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/guest_rating_background"
+            app:textStyle="medium"
             android:gravity="center"
-            android:padding="4dp"
+            android:paddingBottom="4dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingTop="3dp"
             android:textColor="#ffffff"
-            android:textSize="11.5sp"
-            android:textStyle="bold" />
+            android:textSize="10sp" />
 
         <com.expedia.bookings.widget.TextView
             android:layout_width="0dp"
@@ -93,12 +113,30 @@
             android:layout_marginLeft="4dp"
             android:layout_weight="1"
             android:text="@string/guest_recommend"
-            android:textSize="12sp" />
+            android:textColor="@color/hotel_cell_gray_text"
+            android:textSize="10sp" />
 
-        <com.expedia.bookings.widget.TextView
-            android:id="@+id/top_amenity_title"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="fill_parent"
+            android:gravity="center_vertical|right"
+            android:orientation="vertical">
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/price_per_night"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:textStyle="medium"
+                android:textColor="@color/hotel_cell_gray_text"
+                android:textSize="15sp" />
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/top_amenity_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/hotel_cell_gray_text"
+                android:textSize="10sp" />
+        </LinearLayout>
 
     </LinearLayout>
 
