--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -93,6 +93,8 @@
     <color name="hotel_filter_spinner_text_color">#393E43</color>
     <color name="etp_text_color">#29a653</color>
     <color name="room_rate_refundable_cancellation_text_color">#008C5D</color>
+    <color name="hotel_cell_gray_text">#888888</color>
+    <color name="hotel_cell_light_gray_text">#D7D7D7</color>
 
     <!-- Login -->
     <color name="login_text_hotels">#FFFFFF</color>
