--- a/project/src/main/res/values/dimens.xml
+++ b/project/src/main/res/values/dimens.xml
@@ -281,6 +281,7 @@
     <dimen name="car_slide_to_purchase_padding">50dp</dimen>
     <dimen name="car_image_width">300dp</dimen>
     <dimen name="car_unexpanded_space_height">165dp</dimen>
+    <dimen name="car_expanded_space_height">350dp</dimen>
     <dimen name="hotel_spinner_height">50dp</dimen>
 
     <!-- Dimensions for leanplum in app message templates -->
