--- a/project/src/samsung/res/values/themes.xml
+++ b/project/src/samsung/res/values/themes.xml
@@ -67,6 +67,8 @@
         <item name="skin_flightLoginActionBarIcon">@drawable/ic_logo_flights_samsung</item>
         <item name="skin_etp_pay_now_charges_text">@string/etp_pay_now_charges_text</item>
         <item name="skin_dealText">@string/samsung_deal</item>
+        <item name="skin_couponSuccessMessageColor">@color/hotel_price_text_color_samsung</item>
+
     </style>
 
     <style name="FlightTheme" parent="@style/Theme.Samsung">
