--- a/project/src/main/res/layout/include_refinements_layout.xml
+++ b/project/src/main/res/layout/include_refinements_layout.xml
@@ -22,7 +22,7 @@
             android:layout_height="@dimen/phone_search_calendar_height"
             mobiata:allowHybridDragging="true"
             mobiata:calendarHeaderBackground="@drawable/bg_calendar_header"
-            mobiata:cellTextColor="@color/calendar_cell_text"
+            mobiata:cellTextColor="?attr/skin_calendarDatePickerTextColor"
             mobiata:drawGridLines="false"
             mobiata:headerInstructionText="@string/calendar_instructions_hotels_no_dates_selected"
             mobiata:headerInstructionTextSpaceReserved="true"
