--- a/project/src/main/res/layout/activity_hotel.xml
+++ b/project/src/main/res/layout/activity_hotel.xml
@@ -25,4 +25,10 @@
         android:background="#EAEAEA"
         android:visibility="gone"/>
 
+    <com.expedia.bookings.presenter.hotel.HotelCheckoutPresenter
+        android:id="@+id/hotel_checkout_presenter"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
+
 </com.expedia.bookings.presenter.hotel.HotelPresenter>
