--- a/project/src/main/res/layout/widget_traveler_picker.xml
+++ b/project/src/main/res/layout/widget_traveler_picker.xml
@@ -3,15 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="UnusedResources">
 
-        <com.expedia.bookings.widget.TextView
-            android:id="@+id/num_guests"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/hotel_traveler_padding"
-            android:textColor="@color/cars_actionbar_text_color"
-            android:textSize="15sp"
-            android:textStyle="bold" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -75,39 +66,66 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:textSize="15sp" >
+            android:textSize="15sp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/hotel_traveler_table_margin"
-                android:orientation="horizontal" >
+                android:orientation="horizontal">
 
-                <Spinner
-                    android:id="@+id/child_spinner_1"
-                    style="@style/HotelSpinner" />
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1">
 
-                <Spinner
-                    android:id="@+id/child_spinner_2"
-                    style="@style/HotelSpinner" />
+                    <Spinner
+                        android:id="@+id/child_spinner_1"
+                        style="@style/HotelSpinner" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1">
+
+                    <Spinner
+                        android:id="@+id/child_spinner_2"
+                        style="@style/HotelSpinner" />
+                </LinearLayout>
 
             </LinearLayout>
-
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:layout_marginBottom="@dimen/hotel_traveler_table_margin"
+                android:orientation="horizontal">
 
-                <Spinner
-                    android:id="@+id/child_spinner_3"
-                    style="@style/HotelSpinner" />
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1">
 
-                <Spinner
-                    android:id="@+id/child_spinner_4"
-                    style="@style/HotelSpinner" />
+                    <Spinner
+                        android:id="@+id/child_spinner_3"
+                        style="@style/HotelSpinner" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1">
+
+                    <Spinner
+                        android:id="@+id/child_spinner_4"
+                        style="@style/HotelSpinner" />
+                </LinearLayout>
 
             </LinearLayout>
+
         </LinearLayout>
 
 </merge>
