--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -331,4 +331,6 @@
     <attr name="skin_filterNumberBgDrawable" format="reference" />
     <attr name="skin_accountCreationBackgroundDrawable" format="reference" />
 
+    <attr name="skin_errorIndicationExclaimationDrawable" format="reference" />
+
 </resources>
