--- a/project/src/travelocity/res/values/styles_cars.xml
+++ b/project/src/travelocity/res/values/styles_cars.xml
@@ -31,5 +31,6 @@
         <item name="skin_hotelCheckoutLogoutLogoDrawable">@drawable/tvly</item>
         <item name="skin_tabletCheckoutLoginLogoDrawable">@drawable/tvly</item>
         <item name="skin_filterNumberBgDrawable">@drawable/filter_number_bg_cars_tvly</item>
+        <item name="skin_errorIndicationExclaimationDrawable">@drawable/invalid</item>
     </style>
 </resources>
