--- a/project/src/main/res/values/themes.xml
+++ b/project/src/main/res/values/themes.xml
@@ -231,6 +231,7 @@
         <item name="skin_confirmationHeaderFlightDividerLineColor">@color/confirmation_header_divider_flight</item>
         <item name="skin_checkmarkFlightDrawable">@drawable/checkmark_flight</item>
         <item name="skin_bookNowButtonDrawable">@drawable/btn_signin</item>
+        <item name="skin_hotelPriceTextStyle">@style/HotelPriceTextStyle</item>
     </style>
 
     <!-- Inherit EB or VSC theme based on desired project -->
