--- a/project/src/main/res/layout/section_hotel_summary.xml
+++ b/project/src/main/res/layout/section_hotel_summary.xml
@@ -119,14 +119,14 @@
 
         <TextView
             android:id="@+id/price_text_view"
+            style="?attr/skin_hotelPriceTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:includeFontPadding="false"
             android:textColor="?attr/skin_hotelPriceStandardColor"
-            android:textSize="@dimen/hotel_row_price_text_size"
-            android:textStyle="bold" />
+            android:textSize="@dimen/hotel_row_price_text_size" />
 
         <TextView
             android:id="@+id/not_rated_text_view"
