--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -366,4 +366,5 @@
     <attr name="skin_lxTicketMinusButtonSelectorDrawable" format="reference" />
 
     <attr name="skin_tripsTabText" format="reference|string" />
+    <attr name="skin_hotelPriceTextStyle" format="reference" />
 </resources>
