--- a/project/src/samsung/res/values/styles.xml
+++ b/project/src/samsung/res/values/styles.xml
@@ -37,4 +37,6 @@
         <item name="android:background">@drawable/bg_action_bar_samsung</item>
     </style>
 
+    <style name="HotelPriceTextStyleSamsung" />
+
 </resources>
