Samsung updated select room background drawable.

--- a/project/src/main/res/values/themes.xml
+++ b/project/src/main/res/values/themes.xml
@@ -230,6 +230,7 @@
         <item name="skin_confirmationHeaderHotelDividerLineColor">@color/confirmation_header_divider_hotel</item>
         <item name="skin_confirmationHeaderFlightDividerLineColor">@color/confirmation_header_divider_flight</item>
         <item name="skin_checkmarkFlightDrawable">@drawable/checkmark_flight</item>
+        <item name="skin_bookNowButtonDrawable">@drawable/btn_signin</item>
     </style>
 
     <!-- Inherit EB or VSC theme based on desired project -->
