--- a/project/src/samsung/res/layout/widget_app_intro_layout.xml
+++ b/project/src/samsung/res/layout/widget_app_intro_layout.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v4.view.ViewPager android:id="@+id/app_intro_pager"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/app_intro_pager"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
@@ -13,8 +14,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left|bottom"
-        android:paddingBottom="30dp"
-        android:paddingLeft="20dp"
+        android:gravity="center"
+        android:padding="@dimen/intro_pager_action_padding"
         android:text="@string/app_intro_skip"
         android:textColor="@android:color/white" />
 
@@ -24,16 +25,14 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center|bottom"
         android:orientation="horizontal"
-        android:paddingBottom="30dp" />
+        android:paddingBottom="@dimen/intro_pager_action_padding" />
 
     <ImageView
         android:id="@+id/pager_next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right|bottom"
-        android:paddingBottom="30dp"
-        android:paddingRight="20dp"
-        android:src="@drawable/intro_next"
-        />
+        android:padding="@dimen/intro_pager_action_padding"
+        android:src="@drawable/intro_next" />
 
 </com.expedia.bookings.widget.AppIntroWidget>
