--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -10,8 +10,11 @@
     <!-- PhoneSearchActivity's actionbar padding required in VSC due to rainbow bar -->
     <attr name="skin_hotelSearchActionBarPadding" format="reference|dimension" />
 
-    <!-- ActionBar icon/logo in WebView/Preference/Info Activities -->
+    <!-- ActionBar icon/logo in WebView/Preference Activities -->
     <attr name="skin_webViewPreferencesActionBarLogo" format="reference" />
+
+    <!-- ActionBar logo in Info Activity -->
+    <attr name="skin_actionBarAboutLogo" format="reference" />
 
     <!-- ActionBar icon/logo in WebView that also sets a title -->
     <attr name="skin_webViewPreferencesActionBarLogoWithTitle" format="reference" />
