--- a/project/src/lastMinute/res/values/themes.xml
+++ b/project/src/lastMinute/res/values/themes.xml
@@ -39,6 +39,7 @@
         <item name="skin_actionBarCheckoutDrawable">@drawable/ic_action_bar_checkout_arrow_blue_lm</item>
         <item name="skin_actionBarButtonTextColor">@color/action_bar_text_white_lm</item>
         <item name="skin_loginBookNowButtonDrawable">@drawable/btn_signin_lm</item>
+        <item name="skin_bookNowButtonDrawable">@drawable/btn_signin_lm</item>
         <item name="skin_hotelConfirmationCallActionText">@string/call_lm_customer_support</item>
         <item name="skin_calendarDatePickerCellDrawable">@drawable/calendar_date_picker_cell_lm</item>
         <item name="skin_calendarDatePickerPopupDrawable">@drawable/calendar_date_picker_popup_lm</item>
