#3783 TVLY:Cars> Brand break on "Select saved contacts" on Driver details page.

--- a/project/src/travelocity/res/values/styles_cars.xml
+++ b/project/src/travelocity/res/values/styles_cars.xml
@@ -32,5 +32,6 @@
         <item name="skin_tabletCheckoutLoginLogoDrawable">@drawable/tvly</item>
         <item name="skin_filterNumberBgDrawable">@drawable/filter_number_bg_cars_tvly</item>
         <item name="skin_errorIndicationExclaimationDrawable">@drawable/invalid</item>
+        <item name="traveler_checkout_circle_drawable">@drawable/car_driver_checkout_circle_tvly</item>
     </style>
 </resources>
