#3788 Samsung:Cars> Brand break on "Select saved contacts" on Driver details page.

--- a/project/src/samsung/res/values/styles_cars.xml
+++ b/project/src/samsung/res/values/styles_cars.xml
@@ -30,5 +30,6 @@
         <item name="skin_phoneCheckoutLoginLogoDrawable">@drawable/expedia</item>
         <item name="skin_hotelCheckoutLogoutLogoDrawable">@drawable/expedia</item>
         <item name="skin_tabletCheckoutLoginLogoDrawable">@drawable/expedia</item>
+        <item name="traveler_checkout_circle_drawable">@drawable/car_driver_checkout_circle_samsung</item>
     </style>
 </resources>
