--- a/project/src/travelocity/res/values/styles_cars.xml
+++ b/project/src/travelocity/res/values/styles_cars.xml
@@ -31,5 +31,6 @@
         <item name="skin_phoneCheckoutLoginLogoDrawable">@drawable/tvly</item>
         <item name="skin_hotelCheckoutLogoutLogoDrawable">@drawable/tvly</item>
         <item name="skin_tabletCheckoutLoginLogoDrawable">@drawable/tvly</item>
+        <item name="traveler_checkout_circle_drawable">@drawable/car_driver_checkout_circle</item>
     </style>
 </resources>
