--- a/project/src/main/res/layout/widget_hotel_confirmation.xml
+++ b/project/src/main/res/layout/widget_hotel_confirmation.xml
@@ -2,7 +2,7 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
-        android:id="@+id/text_view"
+        android:id="@+id/itin_text_view"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:gravity="center"
