--- a/project/src/main/res/layout/hotel_checkout_summary_widget.xml
+++ b/project/src/main/res/layout/hotel_checkout_summary_widget.xml
@@ -3,16 +3,46 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <Space
-        android:id="@+id/spacing_view"
+    <ImageView
+        android:id="@+id/hotel_room_background"
         android:layout_width="match_parent"
         android:layout_height="120dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_alignBottom="@+id/hotel_room_background"
+        android:layout_alignLeft="@+id/hotel_room_background"
+        android:layout_alignRight="@+id/hotel_room_background"
+        android:layout_alignTop="@+id/hotel_room_background"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/hotel_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/check_in_out_dates"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/address_line_one"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/address_city_state"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/hotel_booking_summary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/spacing_view"
+        android:layout_below="@+id/hotel_room_background"
         android:orientation="vertical">
 
         <TextView
