--- a/project/src/samsung/res/values/styles_lx.xml
+++ b/project/src/samsung/res/values/styles_lx.xml
@@ -33,6 +33,7 @@
         <item name="skin_lxUncheckedToggleTextColor">@color/lx_unchecked_toggle_text_color_samsung</item>
         <item name="skin_lxTicketPlusButtonSelectorDrawable">@drawable/lx_ticket_plus_button_selector_samsung</item>
         <item name="skin_lxTicketMinusButtonSelectorDrawable">@drawable/lx_ticket_minus_button_selector_samsung</item>
+        <item name="skin_errorIndicationExclaimationDrawable">@drawable/invalid</item>
 
     </style>
 
