--- a/project/src/main/res/layout/widget_checkout_base.xml
+++ b/project/src/main/res/layout/widget_checkout_base.xml
@@ -13,22 +13,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:animateLayoutChanges="true"
+            android:paddingLeft="9dp"
+            android:paddingRight="9dp"
             android:orientation="vertical">
 
-            <android.support.v7.widget.CardView
+            <com.expedia.bookings.widget.FrameLayout
                 android:id="@+id/summary_container"
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="9dp"
-                android:layout_marginRight="9dp"
                 android:layout_marginTop="9dp"
                 android:animateLayoutChanges="true"
-                android:background="#FFF"
-                card_view:cardCornerRadius="3dp"
-                card_view:cardElevation="1dp">
+                android:background="@drawable/card_background">
 
-            </android.support.v7.widget.CardView>
+            </com.expedia.bookings.widget.FrameLayout>
 
             <com.expedia.bookings.widget.AccountButton
                 android:id="@+id/login_widget"
@@ -36,8 +33,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginLeft="9dp"
-                android:layout_marginRight="9dp"
                 android:layout_marginTop="12dp"
                 android:orientation="vertical" />
 
@@ -52,7 +47,6 @@
                     android:layout_width="0dp"
                     android:layout_height="1dp"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="9dp"
                     android:layout_marginRight="9dp"
                     android:layout_weight="1"
                     android:background="#979797" />
@@ -68,9 +62,8 @@
                     android:layout_width="0dp"
                     android:layout_height="1dp"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="9dp"
-                    android:layout_marginRight="9dp"
                     android:layout_weight="1"
+                    android:layout_marginLeft="9dp"
                     android:background="#979797" />
 
             </LinearLayout>
@@ -80,8 +73,6 @@
                 style="?attr/checkout_card_view_style"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="9dp"
-                android:layout_marginRight="9dp"
                 android:layout_marginTop="12dp" />
 
             <com.expedia.bookings.widget.PaymentWidget
@@ -89,8 +80,6 @@
                 style="?attr/checkout_card_view_style"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="9dp"
-                android:layout_marginRight="9dp"
                 android:layout_marginTop="12dp" />
 
             <com.expedia.bookings.widget.TextView
