--- a/project/src/airAsiaGo/res/values/themes.xml
+++ b/project/src/airAsiaGo/res/values/themes.xml
@@ -79,6 +79,7 @@
         <item name="skin_flightRulesActionBarLogo">@drawable/ic_logo_flights_aag</item>
         <item name="skin_hotelLoginActionBarIcon">@drawable/ic_action_bar_aag_logo_small</item>
         <item name="skin_flightLoginActionBarIcon">@drawable/ic_logo_flights_aag</item>
+        <item name="skin_flightLoadingMessageTextColor">@color/flight_loading_message_text_color_aag</item>
     </style>
 
     <style name="FlightTheme" parent="@style/Theme.AirAsiaGo">
