--- a/project/src/voyages/res/values/themes.xml
+++ b/project/src/voyages/res/values/themes.xml
@@ -85,6 +85,7 @@
         <item name="skin_flightRulesActionBarLogo">@drawable/ic_logo_flights</item>
         <item name="skin_hotelLoginActionBarIcon">@drawable/ic_logo_vsc</item>
         <item name="skin_flightLoginActionBarIcon">@drawable/ic_logo_flights</item>
+        <item name="skin_flightLoadingMessageTextColor">@color/flight_loading_message_text_color_vsc</item>
     </style>
 
     <!-- Inherit EB or VSC theme based on desired project -->
